v0.27.0/_sources/api-reference/sim_telarray.md.txt
(simtelarray)=

# sim_telarray

Support modules for running sim_telarray.

## simtel_config_reader

(simtel-config-reader-1)=

```{eval-rst}
.. automodule:: simtel.simtel_config_reader
   :members:
```

## simtel_config_writer

(simtel-config-writer-1)=

```{eval-rst}
.. automodule:: simtel.simtel_config_writer
   :members:
```

## simtel_seeds

(simtel-seeds-1)=

```{eval-rst}
.. automodule:: simtel.simtel_seeds
   :members:
```

## simtel_table_reader

(simtel-table-reader-1)=

```{eval-rst}
.. automodule:: simtel.simtel_table_reader
   :members:
```

## simtel_io_metadata

(simtel-io-metadata-1)=

```{eval-rst}
.. automodule:: simtel.simtel_io_metadata
   :members:
```

## simulator_array

(simulate-array-1)=

```{eval-rst}
.. automodule:: simtel.simulator_array
   :members:
```

## simulator_camera_efficiency

(simulate-camera-efficiency-1)=

```{eval-rst}
.. automodule:: simtel.simulator_camera_efficiency
   :members:
```

## simulator_light_emission

(simulate-light-1)=

```{eval-rst}
.. automodule:: simtel.simulator_light_emission
   :members:
```

## simulator_ray_tracing

(simulate-ray-tracing-1)=

```{eval-rst}
.. automodule:: simtel.simulator_ray_tracing
   :members:
```

## pulse_shapes

(pulse_shapes-1)=

```{eval-rst}
.. automodule:: simtel.pulse_shapes
   :members:
```
